updated openAPI spec
